# design-patterns

./: .gitignore  BUILD  MODULE.bazel  go.mod
abstract_factory/: BUILD.bazel  abstract_factory.go  abstract_factory_test.go
abstract_factory/cpp/: BUILD.bazel  abstract_factory.cc  abstract_factory.h  abstract_factory_test.cc
builder/: BUILD.bazel  builder.go
builder/cpp/: BUILD.bazel  builder.cc  builder.h  builder_test.cc
decorator/: BUILD.bazel  decorator.go  decorator_test.go
factory/: BUILD.bazel  factory.go
observer/: BUILD.bazel  observer.go  observer_test.go
observer/cpp/: BUILD.bazel  observer.cc  observer.h  observer_test.cc
prototype/: BUILD.bazel  prototype.go  prototype_test.go
prototype/cpp/: BUILD.bazel  prototype.cc  prototype.h  prototype_test.cc
proxy/: BUILD.bazel  proxy.go
state/: BUILD.bazel  state.go  state_test.go
state/cpp/: BUILD.bazel  state.cc  state.h  state_test.cc
strategy/: BUILD.bazel  strategy.go  strategy_test.go
strategy/cpp/: BUILD.bazel  strategy.cc  strategy.h  strategy_test.cc
template/: BUILD.bazel  template.go  template_test.go
template/cpp/: BUILD.bazel  template.cc  template.h  template_test.cc
visitor/: BUILD.bazel  visitor.go  visitor_test.go
visitor/cpp/: BUILD.bazel  visitor.cc  visitor.h  visitor_test.cc
