load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "factory",
    srcs = ["factory.go"],
    importpath = "design-pattern/factory",
    visibility = ["//visibility:public"],
)

go_test(
    name = "factory_test",
    srcs = ["factory_test.go"],
    embed = [":factory"],
)
