load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "design-pattern/template",
    visibility = ["//visibility:public"],
)

go_test(
    name = "template_test",
    srcs = ["template_test.go"],
    embed = [":template"],
)
