load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "visitor",
    srcs = ["visitor.go"],
    importpath = "design-pattern/visitor",
    visibility = ["//visibility:public"],
)

go_test(
    name = "visitor_test",
    srcs = ["visitor_test.go"],
    embed = [":visitor"],
)
