load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "strategy",
    srcs = ["strategy.cc"],
    hdrs = ["strategy.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "strategy_test",
    srcs = ["strategy_test.cc"],
    deps = [
        ":strategy",
        "@googletest//:gtest_main",
    ],
)
